tolk-tester/tests/invalid-syntax/err-3164.tolk
fun main() {
    try {

    } catch(if, arg) {}
    return 0;
}

/**
@compilation_should_fail
@stderr expected identifier, got `if`
@stderr catch(if
 */
